@@ -910,10 +910,12 @@ public class FormDataInventory {
     String barcode = barcodeLive.getValue();
     Product product = productDetailsLive.getValue().getProduct();
     Store store = storeLive.getValue();
+    String note = noteLive.getValue();
 
     ProductBarcode productBarcode = new ProductBarcode();
     productBarcode.setProductIdInt(product.getId());
     productBarcode.setBarcode(barcode);
+    productBarcode.setNote(note);
     if (store != null && isFeatureEnabled(PREF.FEATURE_STOCK_PRICE_TRACKING)) {
       productBarcode.setStoreId(String.valueOf(store.getId()));
     }
