@@ -12,6 +12,8 @@
 - Improved: Info shown for action button on overview start page (#540)
 - Improved: On recipe page ingredients now can be added to shopping list with exclude option (#632)
 - Improved: App now supports disabled stock feature and hides stock parts, same with recipes (#647)
+- Improved: When adding an unknown barcode through purchase or inventory, note is saved (#644, #619)
+- Improved: When adding an unknown barcode through purchase, amount and unit is saved (#644)
 - Fixed: Recipe actions throwing errors (thanks @timhae!) (#646)
 - Fixed: Simultaneous display of recipe photos and placeholder images
 - Fixed: Behavior option "reduce app startup time" not working on Android 12+
